src-tauri/error.txt
    Checking tauri-app v0.1.0 (E:\project\gear-poi-manager\src-tauri)
error[E0107]: missing generics for struct `UriSchemeContext`
    --> src\lib.rs:64:17
     |
  64 |     ctx: tauri::UriSchemeContext,
     |                 ^^^^^^^^^^^^^^^^ expected 1 generic argument
     |
note: struct defined here, with 1 generic parameter: `R`
    --> C:\Users\Gear\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tauri-2.10.3\src\app.rs:2318:12
     |
2318 | pub struct UriSchemeContext<'a, R: Runtime> {
     |            ^^^^^^^^^^^^^^^^     -
help: add missing generic argument
     |
  64 |     ctx: tauri::UriSchemeContext<R>,
     |                                 +++

error[E0599]: no method named `emit` found for struct `AppHandle<R>` in the current scope
   --> src\commands.rs:80:31
    |
 80 |             let _ = app_clone.emit("tile-download-progress", total);
    |                               ^^^^
    |
   ::: C:\Users\Gear\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tauri-2.10.3\src\lib.rs:952:6
    |
952 |   fn emit<S: Serialize + Clone>(&self, event: &str, payload: S) -> Result<()> {
    |      ---- the method is available for `AppHandle` here
    |
    = help: items from traits can only be used if the trait is in scope
help: there is a method `exit` with a similar name, but with different arguments
   --> C:\Users\Gear\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tauri-2.10.3\src\app.rs:532:3
    |
532 |   pub fn exit(&self, exit_code: i32) {
    |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: trait `Emitter` which provides `emit` is implemented but not in scope; perhaps you want to import it
    |
  1 + use tauri::Emitter;
    |

error[E0282]: type annotations needed for `Arc<_, _>`
   --> src\lib.rs:114:17
    |
114 |             let db_clone = Arc::clone(&db);
    |                 ^^^^^^^^
...
118 |                     let _ = db_clone.put_tile(z, x, y, &bytes_clone);
    |                             -------- type must be known at this point
    |
help: consider giving `db_clone` an explicit type, where the placeholders `_` are specified
    |
114 |             let db_clone: Arc<T, A> = Arc::clone(&db);
    |                         +++++++++++

Some errors have detailed explanations: E0107, E0282, E0599.
For more information about an error, try `rustc --explain E0107`.
error: could not compile `tauri-app` (lib) due to 3 previous errors
